Trainigsplan doesn't work because someone loaded up uncompleted code (Chat gpt) I guess. Not even the div that you need are available.

--- a/fitness-and-health-website/Training/trainings-plan.html
+++ b/fitness-and-health-website/Training/trainings-plan.html
@@ -11,6 +11,7 @@
     <script src="../All/translate.js"></script>
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
     <script src="getExercises.js"></script>
+    <script src="training.js"></script>
 </head>
 <body>
 <!-- Sticky Top Bar -->
@@ -142,7 +143,7 @@
                     </div>
 
                     <!-- Submit Button -->
-                    <button type="button" class="btn btn-custom w-100 translate-text" data-key="form-submit-button" style="color: black">Absenden</button>
+                    <button type="button" class="btn btn-custom w-100 translate-text" data-key="form-submit-button" style="color: black" onclick="getTrainingsPlanFromAI()">Absenden</button>
                 </form>
             </div>
         </div>
