--- a/fitness-and-health-website/Training/trainings-plan.html
+++ b/fitness-and-health-website/Training/trainings-plan.html
@@ -10,7 +10,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="../All/translate.js"></script>
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
-    <script src="getExercises.js"></script>
     <script src="training.js"></script>
 </head>
 <body>
@@ -92,7 +91,7 @@
         <div class="col-md-6">
             <div class="form-container mx-auto" style="max-width: 500px;">
                 <h2 class="text-center t translate-text" data-key="form-title" style="color: #6AA84F;">Trainingsformular</h2>
-                <form>
+                <form id="trainingForm">
                     <div class="mb-3">
                         <label for="weight" class="form-label translate-text" data-key="form-weight-label" style="color: #6AA84F;">Gewicht (kg)</label>
                         <input type="number" class="form-control" id="weight" placeholder="z. B. 70" min="0" required>
@@ -182,6 +181,14 @@
         Die Bedürfnisse älterer Menschen und beeinträchtigter Personen unterscheiden sich häufig von denen jüngerer oder gesunder Personen. Individuelle Trainingspläne helfen dabei, Mobilität, Kraft und Lebensqualität zu fördern, während Verletzungen und Überbelastungen vermieden werden. Es ist wichtig, diese Gruppen zu unterstützen, um einen aktiven und gesunden Lebensstil zu gewährleisten.
     </p>
 </div>
+
+
+<div class="container my-5">
+    <div id="trainingStatusMessage" class="text-center mb-3" style="min-height: 1.5em;"></div>
+    <div id="workoutPlanContainer" class="plan-results">
+    </div>
+</div>
+
 
 <div class="container my-" style="margin-top: 5%; margin-bottom: 5%">
     <footer class="text-center text-lg-start border mt-xl-5 pt-4 contrast" style="box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);">
