Fixed auth0 login on the trainings page

--- a/fitness-and-health-website/Training/trainings-plan.html
+++ b/fitness-and-health-website/Training/trainings-plan.html
@@ -12,6 +12,7 @@
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
     <script src="getExercises.js"></script>
     <script src="training.js"></script>
+    <script src="../All/Auth/auth0.js"></script>
 </head>
 <body>
 <!-- Sticky Top Bar -->
@@ -69,7 +70,7 @@
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="#">
                         <img src="../icones/login-picture.svg" class="changeColor" alt="Login" width="20" height="20">
-                        <span class="translate-text" data-key="login">Login</span>
+                        <span class="translate-text" data-key="login" id="login-button">Login</span>
                     </a>
                 </li>
             </ul>
