Made translation faster but can't remove the sign by the nutrition header

--- a/fitness-and-health-website/Nutrition/nutrition.html
+++ b/fitness-and-health-website/Nutrition/nutrition.html
@@ -145,17 +145,17 @@
 
         <div class="col-md-6 col-12" >
                 <div class="explanation-container p-4 rounded" style="background-color: #F6E8D5;">
-                    <h3 class="mb-3" style="color: #6AA84F; font-family: sans-serif"><span data-translate="true">Wie funktioniert es?</span></h3>
+                    <h3 class="mb-3" style="color: #6AA84F; font-family: sans-serif"><span data-translate="true" class = "translate-text">Wie funktioniert es?</span></h3>
                 <p class="text-muted" style="font-family: sans-serif">
-                    <span data-translate="true">Dieses Formular hilft Ihnen, personalisierte Ernährungspläne zu erstellen. Nach dem Absenden erstellen wir einen maßgeschneiderten Ernährungsplan, der auf Ihre Bedürfnisse abgestimmt ist. Ihr täglicher Kalorienbedarf und die Nährstoffverteilung werden in einer Tabelle angezeigt.</span>
+                    <span data-translate="true" class = "translate-text">Dieses Formular hilft Ihnen, personalisierte Ernährungspläne zu erstellen. Nach dem Absenden erstellen wir einen maßgeschneiderten Ernährungsplan, der auf Ihre Bedürfnisse abgestimmt ist. Ihr täglicher Kalorienbedarf und die Nährstoffverteilung werden in einer Tabelle angezeigt.</span>
                 </p>
                 <ul class="list-group list-group-flush mb-3">
-                    <li class="list-group-item bg-transparent" style="color: #6AA84F; font-family: sans-serif"><span data-translate="true">1. Geben Sie Ihr Gewicht und Ihre Größe an</span></li>
-                    <li class="list-group-item bg-transparent" style="color: #6AA84F; font-family: sans-serif"><span data-translate="true">2. Wählen Sie Ihr Aktivitätslevel</span></li>
-                    <li class="list-group-item bg-transparent" style="color: #6AA84F; font-family: sans-serif"><span data-translate="true">3. Teilen Sie uns weitere Einschränkungen mit</span></li>
+                    <li class="list-group-item bg-transparent translate-text" style="color: #6AA84F; font-family: sans-serif"><span data-translate="true">1. Geben Sie Ihr Gewicht und Ihre Größe an</span></li>
+                    <li class="list-group-item bg-transparent translate-text" style="color: #6AA84F; font-family: sans-serif"><span data-translate="true">2. Wählen Sie Ihr Aktivitätslevel</span></li>
+                    <li class="list-group-item bg-transparent translate-text" style="color: #6AA84F; font-family: sans-serif"><span data-translate="true">3. Teilen Sie uns weitere Einschränkungen mit</span></li>
                 </ul>
                 <p class="text-muted" style="font-family: sans-serif;">
-                    <span data-translate="true">Nach dem Absenden erstellen wir einen maßgeschneiderten Ernährungsplan, der auf Ihre Bedürfnisse abgestimmt ist.</span>
+                    <span data-translate="true" class = "translate-text">Nach dem Absenden erstellen wir einen maßgeschneiderten Ernährungsplan, der auf Ihre Bedürfnisse abgestimmt ist.</span>
                 </p>
             </div>
         </div>
@@ -178,41 +178,41 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
                     <h5 class="text-uppercase mb-4 text-in-fotter" style="color: #F6E8D5; font-family: sans-serif">
-                        <span data-translate="true">Unsere Welt</span>
+                        <span data-translate="true" class = "translate-text">Unsere Welt</span>
                     </h5>
 
                     <ul class="list-unstyled mb-4">
                         <li>
                             <a href="../Shop/shop.html" class="hover-effects">
-                                <span data-translate="true">Produkte</span>
+                                <span data-translate="true" class = "translate-text">Produkte</span>
                             </a>
                         </li>
                         <li>
                             <a href="../Training/trainings-plan.html" class="hover-effects">
-                                <span data-translate="true">Trainingspläne</span>
+                                <span data-translate="true" class = "translate-text">Trainingspläne</span>
                             </a>
                         </li>
                         <li>
                             <a href="../Nutrition/nutrition.html" class="hover-effects">
-                                <span data-translate="true">Ernährungspläne</span>
+                                <span data-translate="true" class = "translate-text">Ernährungspläne</span>
                             </a>
                         </li>
                         <li>
                             <a href="../AboutUs/about-us.html" class="hover-effects">
-                                <span data-translate="true">Über uns</span>
+                                <span data-translate="true" class = "translate-text">Über uns</span>
                             </a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
                     <h5 class="text-uppercase mb-4 text-in-fotter" style="font-family: sans-serif">
-                        <span data-translate="true">Karriere</span>
+                        <span data-translate="true" class = "translate-text">Karriere</span>
                     </h5>
 
                     <ul class="list-unstyled">
                         <li>
                             <a href="#!" class="hover-effects">
-                                <span data-translate="true">Jobs</span>
+                                <span data-translate="true" class = "translate-text">Jobs</span>
                             </a>
                         </li>
                     </ul>
@@ -220,12 +220,12 @@
 
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
                     <h5 class="text-uppercase mb-4 text-in-fotter" style="font-family: sans-serif">
-                        <span data-translate="true">Kontaktiere uns</span>
+                        <span data-translate="true" class = "translate-text">Kontaktiere uns</span>
                     </h5>
 
                     <div class="form-outline form-white mb-4">
                         <a href="mailto:brunnerjan1102@gmail.com" class="styleForEmailInMain hover-effects">
-                            <span data-translate="true">Klicke hier</span>
+                            <span data-translate="true" class = "translate-text">Klicke hier</span>
                         </a>
                     </div>
                 </div>
