Made some tracker styling and updated the js script for the tracker

--- a/fitness-and-health-website/Tracker/tracker.html
+++ b/fitness-and-health-website/Tracker/tracker.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="tracker.css">
     <link href="tracker.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-
+    <script src = "../All/translate.js"></script>
 </head>
 <body>
 
@@ -69,16 +69,8 @@
     </div>
 </nav>
 
-<div class="container tracker-container" >
-    <div class="tracker-grid" id="tableForWeeks">
-        <!-- Header Row -->
-        <script src="../Tracker/tracker.js"></script>
-
-    </div>
-
-    <div class="text-center mt-4">
-
-    </div>
+<div class="tracker-container" >
+    <div id="tableForWeeks" class="p-0 m-0 w-100 mx-auto"></div>
 </div>
 <!-- Header Container -->
 <section class="text-center py-5" style="margin-top: 5%">
@@ -141,6 +133,6 @@
 
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+<script src="../Tracker/tracker.js"></script>
 </body>
 </html>
