--- a/fitness-and-health-website/Training/trainings-plan.html
+++ b/fitness-and-health-website/Training/trainings-plan.html
@@ -177,7 +177,7 @@
 
 
 
-<div class="container explanation-container">
+<div class="container further-explanation-container">
     <h2 class="translate-text" data-key="why-plans-title" style="color: #6AA84F">Wieso Pläne für Ältere und Beeinträchtigte?</h2>
     <p class="text-color translate-text" data-key="why-plans-text">
         Die Bedürfnisse älterer Menschen und beeinträchtigter Personen unterscheiden sich häufig von denen jüngerer oder gesunder Personen. Individuelle Trainingspläne helfen dabei, Mobilität, Kraft und Lebensqualität zu fördern, während Verletzungen und Überbelastungen vermieden werden. Es ist wichtig, diese Gruppen zu unterstützen, um einen aktiven und gesunden Lebensstil zu gewährleisten.
