Added two divs for trainigs page js

--- a/fitness-and-health-website/Training/trainings-plan.html
+++ b/fitness-and-health-website/Training/trainings-plan.html
@@ -175,7 +175,8 @@
     </div>
 </div>
 
-
+<div id = "statusMessage"></div>
+<div id = "writeTable"></div>
 
 <div class="container further-explanation-container">
     <h2 class="translate-text" data-key="why-plans-title" style="color: #6AA84F">Wieso Pläne für Ältere und Beeinträchtigte?</h2>
