Fixed styling in the trainingsplan css

--- a/fitness-and-health-website/Training/trainings-plan.html
+++ b/fitness-and-health-website/Training/trainings-plan.html
@@ -174,20 +174,12 @@
     </div>
 </div>
 
-<div id = "statusMessage"></div>
-<div id = "writeTable"></div>
 
-<div class="container further-explanation-container">
-    <h2 class="translate-text" data-key="why-plans-title" style="color: #6AA84F">Wieso Pläne für Ältere und Beeinträchtigte?</h2>
-    <p class="text-color translate-text" data-key="why-plans-text">
-        Die Bedürfnisse älterer Menschen und beeinträchtigter Personen unterscheiden sich häufig von denen jüngerer oder gesunder Personen. Individuelle Trainingspläne helfen dabei, Mobilität, Kraft und Lebensqualität zu fördern, während Verletzungen und Überbelastungen vermieden werden. Es ist wichtig, diese Gruppen zu unterstützen, um einen aktiven und gesunden Lebensstil zu gewährleisten.
-    </p>
-</div>
 
 
 <div class="container my-5">
-    <div id="trainingStatusMessage" class="text-center mb-3" style="min-height: 1.5em;"></div>
-    <div id="workoutPlanContainer" class="plan-results">
+    <div id="trainingStatusMessage" class="text-center mb-3" style="min-height: 1.5em; background-color: transparent"></div>
+    <div id="workoutPlanContainer" class="plan-results" style = "background-color: transparent">
     </div>
 </div>
 
