--- a/fitness-and-health-website/Tracker/tracker.html
+++ b/fitness-and-health-website/Tracker/tracker.html
@@ -10,6 +10,7 @@
     <link href="tracker.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src = "../All/translate.js"></script>
+    <script type="module" src = "GetAccount.js"></script>
 </head>
 <body>
 
@@ -61,7 +62,7 @@
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="">
                         <img src="../icones/login-picture.svg" class="changeColor" alt="Login" width="20" height="20">
-                        <span class="translate-text" data-key="login">Login</span>
+                        <span class="translate-text" data-key="login" id = "login-button">Login</span>
                     </a>
                 </li>
             </ul>
