Added new website link for tracker page

--- a/fitness-and-health-website/Nutrition/nutrition.html
+++ b/fitness-and-health-website/Nutrition/nutrition.html
@@ -55,6 +55,12 @@
                         <img src="../icones/bxs-group.svg" class="changeColor" alt="Über uns" width="20" height="20"> <span data-translate="true" class = "translate-text">Über uns</span>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link textInNavBar" href="../Tracker/tracker.html">
+                        <img src="../icones/tracker_picture.svg" class="changeColor" alt="Tracker" width="20" height="20">
+                        <span class="translate-text" data-key="tracker">Tracker</span>
+                    </a>
+                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle textInNavBar" href="#" id="navbarLanguageDropdown" role="button"
                        data-bs-toggle="dropdown" aria-expanded="false">
