Fixed some code layout and added the login function on the tracker page

--- a/fitness-and-health-website/AboutUs/about-us.html
+++ b/fitness-and-health-website/AboutUs/about-us.html
@@ -10,7 +10,7 @@
     <script src="../All/translate.js"></script>
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
     <title>Über uns</title>
-    <script src="../All/Auth/auth0.js"></script>
+    <script type="module" src="../All/Auth/auth0.js"></script>
     <script>
         await initializeAuth0Client()
         let a = window.auth0.getTokenSilently();
