--- a/fitness-and-health-website/Shop/shop.html
+++ b/fitness-and-health-website/Shop/shop.html
@@ -12,7 +12,7 @@
     <script src="shop.js"></script>
     <script src="../All/translate.js"></script>
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
-    <script src ="../All/Auth/auth0.js"></script>
+    <script type="module" src ="../All/Auth/auth0.js"></script>
 </head>
 <body>
 
