--- a/fitness-and-health-website/Tracker/tracker.html
+++ b/fitness-and-health-website/Tracker/tracker.html
@@ -10,7 +10,9 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src = "../All/translate.js"></script>
-    <script type="module" src = "GetAccount.js"></script>
+
+    <script type="module" src = "../All/Auth/auth0.js"></script>
+    <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
 </head>
 <body>
 
@@ -66,9 +68,9 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link textInNavBar" href="">
+                    <a class="nav-link textInNavBar" href="#">
                         <img src="../icones/login-picture.svg" class="changeColor" alt="Login" width="20" height="20">
-                        <span class="translate-text" data-key="login" id = "login-button">Login</span>
+                        <span class="translate-text" data-key="login" id="login-button">Login</span>
                     </a>
                 </li>
             </ul>
