--- a/fitness-and-health-website/Training/trainings-plan.html
+++ b/fitness-and-health-website/Training/trainings-plan.html
@@ -11,7 +11,7 @@
     <script src="../All/translate.js"></script>
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
     <script src="training.js"></script>
-    <script src="../All/Auth/auth0.js"></script>
+    <script type="module" src="../All/Auth/auth0.js"></script>
 </head>
 <body>
 <!-- Sticky Top Bar -->
