tried to fix the color for the loading animation on the nutrition page but failed

--- a/fitness-and-health-website/Training/trainings-plan.html
+++ b/fitness-and-health-website/Training/trainings-plan.html
@@ -184,7 +184,7 @@
 
 
 <div class="container my-5">
-    <div id="trainingStatusMessage" class="text-center mb-3" style="min-height: 1.5em; background-color: transparent"></div>
+    <div id="trainingStatusMessage" class="text-center mb-3" style="min-height: 1.5em; background-color: transparent; color: white"></div>
     <div id="workoutPlanContainer" class="plan-results" style = "background-color: transparent">
     </div>
 </div>
