added a new button for the tracker html

--- a/fitness-and-health-website/Tracker/tracker.html
+++ b/fitness-and-health-website/Tracker/tracker.html
@@ -78,11 +78,21 @@
     </div>
 </nav>
 
+
 <!-- Header Container -->
 <section class="text-center py-5" style="margin-top: 5%">
     <h1 class="title-training">Fortschritts-Tracker</h1>
     <p class="lead text-color">Verfolgen Sie Ihre täglichen Aktivitäten und Fortschritte</p>
 </section>
+<div class="container mb-4">
+    <div class="card p-3">
+        <h4 class="translate-text">Neues Ziel hinzufügen</h4>
+        <div class="input-group mb-3">
+            <input type="text" id="newGoalInput" class="form-control translate-text" placeholder="Neues Ziel eingeben">
+            <button class="btn btn-success translate-text" id="addGoalBtn" type="button">Ziel Hinzufügen</button>
+        </div>
+    </div>
+</div>
 
 <div class="tracker-container" >
     <div id="tableForWeeks" class="p-0 m-0 w-100 mx-auto"></div>
