fixed translation on tracker page

--- a/fitness-and-health-website/Tracker/tracker.html
+++ b/fitness-and-health-website/Tracker/tracker.html
@@ -26,27 +26,27 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Mainpage/index.html">
-                        <img src="../icones/bxs-home.svg" class="changeColor" alt="Shop" width="20" height="20"> Startseite
+                        <img src="../icones/bxs-home.svg" class="changeColor" alt="Shop" width="20" height="20"> <span class = "translate-text">Startseite</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Shop/shop.html">
-                        <img src="../icones/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20"> Produkte
+                        <img src="../icones/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20"> <span class = "translate-text">Produkte</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Nutrition/nutrition.html">
-                        <img src="../icones/bx-baguette.svg" class="changeColor" alt="Ernährungspläne" width="20" height="20"> Ernährungspläne
+                        <img src="../icones/bx-baguette.svg" class="changeColor" alt="Ernährungspläne" width="20" height="20"> <span class = "translate-text">Ernährungspläne</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../Training/trainings-plan.html">
-                        <img src="../icones/bx-run.svg" class="changeColor" alt="Trainingspläne" width="20" height="20"> Trainingspläne
+                        <img src="../icones/bx-run.svg" class="changeColor" alt="Trainingspläne" width="20" height="20"> <span class = "translate-text">Trainingspläne</span>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="../AboutUs/about-us.html">
-                        <img src="../icones/bxs-group.svg" class="changeColor" alt="Über uns" width="20" height="20"> Über uns
+                        <img src="../icones/bxs-group.svg" class="changeColor" alt="Über uns" width="20" height="20"> <span class = "translate-text">Über uns</span>
                     </a>
                 </li>
                 <li class="nav-item">
@@ -81,8 +81,8 @@
 
 <!-- Header Container -->
 <section class="text-center py-5" style="margin-top: 5%">
-    <h1 class="title-training">Fortschritts-Tracker</h1>
-    <p class="lead text-color">Verfolgen Sie Ihre täglichen Aktivitäten und Fortschritte</p>
+    <h1 class="title-training translate-text">Fortschritts-Tracker</h1>
+    <p class="lead text-color translate-text">Verfolgen Sie Ihre täglichen Aktivitäten und Fortschritte</p>
 </section>
 <div class="container mb-4">
     <div class="card p-3">
@@ -107,38 +107,38 @@
             <div class="row">
                 <!--Grid column-->
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter" style="color: #F6E8D5;">Unsere Welt</h5>
+                    <h5 class="text-uppercase mb-4 text-in-fotter translate-text" style="color: #F6E8D5;">Unsere Welt</h5>
                     <ul class="list-unstyled mb-4">
                         <li>
-                            <a href="../Shop/shop.html" class="hover-effects">Produkte</a>
+                            <a href="../Shop/shop.html" class="hover-effects"><span class = "translate-text">Produkte</span></a>
                         </li>
                         <li>
-                            <a href="../Training/trainings-plan.html" class="hover-effects">Trainingspläne</a>
+                            <a href="../Training/trainings-plan.html" class="hover-effects"><span class = "translate-text">Trainingspläne</span></a>
                         </li>
                         <li>
-                            <a href="../Nutrition/nutrition.html" class="hover-effects">Ernährungspläne</a>
+                            <a href="../Nutrition/nutrition.html" class="hover-effects"><span class = "translate-text">Ernährungspläne</span></a>
                         </li>
                         <li>
-                            <a href="../AboutUs/about-us.html" class="hover-effects">Über uns</a>
+                            <a href="../AboutUs/about-us.html" class="hover-effects"><span class = "translate-text">Über uns</span></a>
                         </li>
                     </ul>
                 </div>
                 <!--Grid column-->
                 <!--Grid column-->
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter">Karriere</h5>
+                    <h5 class="text-uppercase mb-4 text-in-fotter translate-text">Karriere</h5>
                     <ul class="list-unstyled">
                         <li>
-                            <a href="#!" class="hover-effects">Jobs</a>
+                            <a href="#!" class="hover-effects translate-text">Jobs</a>
                         </li>
                     </ul>
                 </div>
                 <!--Grid column-->
                 <!--Grid column-->
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4 text-in-fotter">Kontaktiere uns</h5>
+                    <h5 class="text-uppercase mb-4 text-in-fotter translate-text">Kontaktiere uns</h5>
                     <div class="form-outline form-white mb-4">
-                        <a href="mailto:brunnerjan1102@gmail.com" class="styleForEmailInMain hover-effects">Klicke hier</a>
+                        <a href="mailto:brunnerjan1102@gmail.com" class="styleForEmailInMain hover-effects translate-text">Klicke hier</a>
                     </div>
                 </div>
                 <!--Grid column-->
