Added a delete function for the tracker page

--- a/fitness-and-health-website/Tracker/tracker.html
+++ b/fitness-and-health-website/Tracker/tracker.html
@@ -93,6 +93,15 @@
         </div>
     </div>
 </div>
+<div class="container mb-4">
+    <div class="card p-3">
+        <h4 class="translate-text">Ziel entfernen</h4>
+        <div class="input-group mb-3">
+            <input type="text" id="deleteGoalInput" class="form-control translate-text" placeholder="Neues Ziel eingeben">
+            <button class="btn btn-success translate-text" id="deleteGoalBtn" type="button">Ziel Hinzufügen</button>
+        </div>
+    </div>
+</div>
 
 <div class="tracker-container" >
     <div id="tableForWeeks" class="p-0 m-0 w-100 mx-auto"></div>
